--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "feli0x",
+  "name": "rerun-cmd",
   "displayName": "Rerun CMD",
-  "description": "",
-  "version": "0.0.1",
+  "author": "Felix Swinkels",
+  "publisher": "feli0x",
+  "homepage": "https://felix.surf/",
+  "description": "Create code snippets in your workspace and share them with your team.",
+  "repository": "https://github.com/feli0x/vscext-rerun-cmd",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.85.0"
   },
