--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "Quickly reload or restart a terminal process by pressing cmd+r in the integrated terminal.",
   "repository": "https://github.com/feli0x/vsce-rerun-cmd",
   "version": "0.1.1",
+  "icon": "assets/icon.png",
   "engines": {
     "vscode": "^1.85.0"
   },
