--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://felix.surf/",
   "description": "Quickly reload or restart a terminal process by pressing cmd+r in the integrated terminal.",
   "repository": "https://github.com/feli0x/vsce-rerun-cmd",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "icon": "assets/icon.png",
   "engines": {
     "vscode": "^1.85.0"
@@ -28,6 +28,10 @@
         "command": "extension.restartLastCommand",
         "key": "cmd+r",
         "when": "terminalFocus"
+      },
+      {
+        "command": "extension.restartLastCommand",
+        "key": "cmd+shift+r"
       }
     ]
   },
